--- a/01_ai_agents_first/02_openrouter/OpenRouter_AI_Agents_SDK.ipynb
+++ b/01_ai_agents_first/02_openrouter/OpenRouter_AI_Agents_SDK.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bilalpiaic/learn-agentic-ai/blob/main/01_ai_agents_first/02_openrouter/OpenRouter_AI_Agents_SDK.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "o92NPvIPpmCv"
       },
       "source": [
@@ -82,7 +92,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "source": [
+        "!pip install -Uq openai-agents"
+      ],
+      "metadata": {
+        "id": "1qoUO4O9va-j"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
       "metadata": {
         "id": "7teAe2rONlBe"
       },
@@ -93,7 +114,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "source": [
+        "import nest_asyncio\n",
+        "nest_asyncio.apply()"
+      ],
+      "metadata": {
+        "id": "J28jCBBEvqXj"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
       "metadata": {
         "id": "z3_PWpn4OIyT"
       },
@@ -114,7 +147,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "source": [
+        "from google.colab import userdata\n",
+        "\n",
+        "OPENROUTER_API_KEY = userdata.get(\"OPENROUTER_API_KEY\")\n"
+      ],
+      "metadata": {
+        "id": "hrjnnfQrv0k7"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
       "metadata": {
         "id": "zvmgohqY0-Wm"
       },
@@ -127,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 31,
       "metadata": {
         "id": "DeTqCZKGlVk_"
       },
@@ -136,7 +182,7 @@
         "#Reference: https://openrouter.ai/docs/quickstart\n",
         "\n",
         "BASE_URL = \"https://openrouter.ai/api/v1\"\n",
-        "MODEL = \"google/gemini-2.0-flash-lite-preview-02-05:free\"\n",
+        "MODEL = \"deepseek/deepseek-chat-v3-0324:free\"\n",
         "\n",
         "# Some other free models on 26th March:\n",
         "# https://openrouter.ai/deepseek/deepseek-chat-v3-0324:free\n",
@@ -154,20 +200,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e0if6eGutM9h",
-        "outputId": "825e3677-45cd-44a2-f199-5841dda36e89"
+        "outputId": "99bd3bd6-d082-4fcc-e0d1-9e2cd6d867cb"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "{'id': 'gen-1742929809-Y1kGIWKn14EWRZY5usb1', 'provider': 'Google', 'model': 'google/gemini-2.0-flash-lite-preview-02-05', 'object': 'chat.completion', 'created': 1742929809, 'choices': [{'logprobs': None, 'finish_reason': 'stop', 'native_finish_reason': 'STOP', 'index': 0, 'message': {'role': 'assistant', 'content': 'The meaning of life is a question that has plagued philosophers, theologians, and individuals for centuries. There\\'s no single, universally accepted answer, and the beauty lies in the exploration and the personal meaning we create. Here\\'s a breakdown of different perspectives:\\n\\n**1. Philosophical Approaches:**\\n\\n*   **Nihilism:** This philosophy argues that life is inherently meaningless, without objective purpose, value, or truth. There\\'s nothing to strive for beyond the immediate.\\n*   **Existentialism:** Emphasizes individual freedom and responsibility. We are born into the world without a predetermined purpose, and it\\'s up to us to create our own meaning through our choices and actions. Key figures include Jean-Paul Sartre and Albert Camus.\\n*   **Absurdism:** Acknowledges the conflict between the human desire for meaning and the seemingly meaningless universe. Embraces the absurdity of existence, and encourages a defiant embrace of life despite its inherent lack of purpose. Camus\\'s \"The Myth of Sisyphus\" is a key text.\\n*   **Hedonism:** The pursuit of pleasure and happiness is seen as the ultimate goal of life.\\n*   **Stoicism:** Finding meaning in virtue, reason, and acceptance of what we cannot control. Focus on living a life of integrity, inner peace, and resilience.\\n*   **Utilitarianism:** The meaning of life is to maximize overall happiness and well-being for the greatest number of people (or sometimes, sentient beings).\\n\\n**2. Religious/Spiritual Approaches:**\\n\\n*   **Theism (Judaism, Christianity, Islam, etc.):**  Life\\'s meaning often centers around a relationship with a divine being (God), following religious laws and teachings, serving a higher power, and attaining salvation or enlightenment. Purpose often includes worship, obedience, love, and living in accordance with a divine plan.\\n*   **Buddhism:** The purpose of life is to overcome suffering and achieve enlightenment (Nirvana) by understanding the nature of reality, practicing mindfulness, and following the Eightfold Path.\\n*   **Hinduism:** Meaning is often related to dharma (duty), karma (actions and consequences), and reincarnation, with the ultimate goal of achieving moksha (liberation from the cycle of birth and death).\\n*   **Many different Spiritual Pathways:** Often involves self-discovery, connection with nature, and creating meaningful connections with others by treating each other with kindness, respect, and compassion.\\n\\n**3. Humanistic/Secular Approaches:**\\n\\n*   **Creating Meaning:** Discovering or creating our own meaning. This includes setting goals, pursuing passions, building relationships, contributing to society, developing self-awareness, and living a life with values.\\n*   **Evolutionary Psychology:** Life\\'s core meaning/purpose can be viewed as driven by evolutionary forces. Survival and reproduction are key.\\n*   **Contribution:** Focusing on the good of the world around you. Helping others, or making the world a better place.\\n*   **Experiences and Relationships:** Finding meaning in the connections we make with others, and the various experiences had during life.\\n\\n**In Summary:**\\n\\nThe meaning of life is **subjective.** It\\'s not something you find; it\\'s something you **create**. It\\'s a journey of exploration, self-discovery, and deciding what gives *your* life value.\\n\\nHere are some ways to think about the question to help you find your own answer:\\n\\n*   **Reflect on your values:** What is important to you? What do you care about?\\n*   **Explore your passions:** What brings you joy and fulfillment?\\n*   **Set goals:** What do you want to achieve? What impact do you want to make?\\n*   **Build relationships:** How do you want to connect with others?\\n*   **Embrace change:** Be open to new experiences and perspectives.\\n*   **Remember that it can evolve:** The meaning you find today might change as you grow and evolve. Don\\'t be afraid to reassess.\\n\\nUltimately, the most profound meaning of life is the one you give it.\\n', 'refusal': None}}], 'usage': {'prompt_tokens': 7, 'completion_tokens': 848, 'total_tokens': 855}}\n"
+            "{'id': 'gen-1747025879-eQUswidHK7HRaOzxpReP', 'provider': 'Targon', 'model': 'deepseek/deepseek-chat-v3-0324:free', 'object': 'chat.completion', 'created': 1747025879, 'choices': [{'logprobs': None, 'finish_reason': 'stop', 'native_finish_reason': 'stop', 'index': 0, 'message': {'role': 'assistant', 'content': '**The meaning of life** is a profound philosophical question with no single definitive answer. Different perspectives offer various interpretations:\\n\\n1. **Philosophical Views**  \\n   - **Existentialism**: Life has no inherent meaning; individuals must create their own purpose through choices and actions (e.g., Sartre, Camus).  \\n   - **Absurdism**: Humans seek meaning in a meaningless universe, but embracing this tension can lead to freedom (Camus).  \\n   - **Stoicism**: Meaning comes from virtue, resilience, and aligning with nature.  \\n\\n2. **Religious/Spiritual Beliefs**  \\n   - **Abrahamic religions**: Purpose is to serve God, attain salvation, or follow divine will (e.g., Christianity, Islam).  \\n   - **Eastern philosophies**: Meaning may involve enlightenment (Buddhism), harmony (Taoism), or liberation from rebirth (Hinduism).  \\n\\n3. **Scientific Perspectives**  \\n   - **Evolutionary biology**: Life’s \"purpose\" is survival and reproduction.  \\n   - **Cosmology**: In a vast universe, meaning is subjective, derived from human consciousness.  \\n\\n4. **Personal Approach**  \\n   Many find meaning through relationships, creativity, helping others, or personal growth (e.g., Viktor Frankl’s *logotherapy*).  \\n\\n**Short answer**: Life’s meaning is what you choose to make it—whether through love, knowledge, art, service, or simply being.  \\n\\nWould you like to explore a specific angle?', 'refusal': None, 'reasoning': None}}], 'usage': {'prompt_tokens': 10, 'completion_tokens': 313, 'total_tokens': 323, 'prompt_tokens_details': None}}\n"
           ]
         }
       ],
@@ -196,28 +242,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 157
+          "height": 105
         },
         "id": "mv3B6_oRto5S",
-        "outputId": "d3269b08-9f94-4397-8791-27a3fa6c804e"
+        "outputId": "7e7cfaca-61e3-4d87-d9e2-34b05d6d6116"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "'**The meaning of life** is a profound philosophical question with no single definitive answer. Different perspectives offer various interpretations:\\n\\n1. **Philosophical Views**  \\n   - **Existentialism**: Life has no inherent meaning; individuals must create their own purpose through choices and actions (e.g., Sartre, Camus).  \\n   - **Absurdism**: Humans seek meaning in a meaningless universe, but embracing this tension can lead to freedom (Camus).  \\n   - **Stoicism**: Meaning comes from virtue, resilience, and aligning with nature.  \\n\\n2. **Religious/Spiritual Beliefs**  \\n   - **Abrahamic religions**: Purpose is to serve God, attain salvation, or follow divine will (e.g., Christianity, Islam).  \\n   - **Eastern philosophies**: Meaning may involve enlightenment (Buddhism), harmony (Taoism), or liberation from rebirth (Hinduism).  \\n\\n3. **Scientific Perspectives**  \\n   - **Evolutionary biology**: Life’s \"purpose\" is survival and reproduction.  \\n   - **Cosmology**: In a vast universe, meaning is subjective, derived from human consciousness.  \\n\\n4. **Personal Approach**  \\n   Many find meaning through relationships, creativity, helping others, or personal growth (e.g., Viktor Frankl’s *logotherapy*).  \\n\\n**Short answer**: Life’s meaning is what you choose to make it—whether through love, knowledge, art, service, or simply being.  \\n\\nWould you like to explore a specific angle?'"
+            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            },
-            "text/plain": [
-              "'The meaning of life is a question that has plagued philosophers, theologians, and individuals for centuries. There\\'s no single, universally accepted answer, and the beauty lies in the exploration and the personal meaning we create. Here\\'s a breakdown of different perspectives:\\n\\n**1. Philosophical Approaches:**\\n\\n*   **Nihilism:** This philosophy argues that life is inherently meaningless, without objective purpose, value, or truth. There\\'s nothing to strive for beyond the immediate.\\n*   **Existentialism:** Emphasizes individual freedom and responsibility. We are born into the world without a predetermined purpose, and it\\'s up to us to create our own meaning through our choices and actions. Key figures include Jean-Paul Sartre and Albert Camus.\\n*   **Absurdism:** Acknowledges the conflict between the human desire for meaning and the seemingly meaningless universe. Embraces the absurdity of existence, and encourages a defiant embrace of life despite its inherent lack of purpose. Camus\\'s \"The Myth of Sisyphus\" is a key text.\\n*   **Hedonism:** The pursuit of pleasure and happiness is seen as the ultimate goal of life.\\n*   **Stoicism:** Finding meaning in virtue, reason, and acceptance of what we cannot control. Focus on living a life of integrity, inner peace, and resilience.\\n*   **Utilitarianism:** The meaning of life is to maximize overall happiness and well-being for the greatest number of people (or sometimes, sentient beings).\\n\\n**2. Religious/Spiritual Approaches:**\\n\\n*   **Theism (Judaism, Christianity, Islam, etc.):**  Life\\'s meaning often centers around a relationship with a divine being (God), following religious laws and teachings, serving a higher power, and attaining salvation or enlightenment. Purpose often includes worship, obedience, love, and living in accordance with a divine plan.\\n*   **Buddhism:** The purpose of life is to overcome suffering and achieve enlightenment (Nirvana) by understanding the nature of reality, practicing mindfulness, and following the Eightfold Path.\\n*   **Hinduism:** Meaning is often related to dharma (duty), karma (actions and consequences), and reincarnation, with the ultimate goal of achieving moksha (liberation from the cycle of birth and death).\\n*   **Many different Spiritual Pathways:** Often involves self-discovery, connection with nature, and creating meaningful connections with others by treating each other with kindness, respect, and compassion.\\n\\n**3. Humanistic/Secular Approaches:**\\n\\n*   **Creating Meaning:** Discovering or creating our own meaning. This includes setting goals, pursuing passions, building relationships, contributing to society, developing self-awareness, and living a life with values.\\n*   **Evolutionary Psychology:** Life\\'s core meaning/purpose can be viewed as driven by evolutionary forces. Survival and reproduction are key.\\n*   **Contribution:** Focusing on the good of the world around you. Helping others, or making the world a better place.\\n*   **Experiences and Relationships:** Finding meaning in the connections we make with others, and the various experiences had during life.\\n\\n**In Summary:**\\n\\nThe meaning of life is **subjective.** It\\'s not something you find; it\\'s something you **create**. It\\'s a journey of exploration, self-discovery, and deciding what gives *your* life value.\\n\\nHere are some ways to think about the question to help you find your own answer:\\n\\n*   **Reflect on your values:** What is important to you? What do you care about?\\n*   **Explore your passions:** What brings you joy and fulfillment?\\n*   **Set goals:** What do you want to achieve? What impact do you want to make?\\n*   **Build relationships:** How do you want to connect with others?\\n*   **Embrace change:** Be open to new experiences and perspectives.\\n*   **Remember that it can evolve:** The meaning you find today might change as you grow and evolve. Don\\'t be afraid to reassess.\\n\\nUltimately, the most profound meaning of life is the one you give it.\\n'"
-            ]
+            }
           },
-          "execution_count": 29,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 35
         }
       ],
       "source": [
@@ -236,23 +282,95 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "source": [
+        "import asyncio\n",
+        "from openai import AsyncOpenAI\n",
+        "from agents import Agent, OpenAIChatCompletionsModel, Runner, set_tracing_disabled\n",
+        "\n",
+        "client = AsyncOpenAI(\n",
+        "    api_key=OPENROUTER_API_KEY,\n",
+        "    base_url=BASE_URL\n",
+        ")\n",
+        "\n",
+        "set_tracing_disabled(disabled=True)\n",
+        "\n",
+        "async def main():\n",
+        "    # This agent will use the custom LLM provider\n",
+        "    agent = Agent(\n",
+        "        name=\"Assistant\",\n",
+        "        instructions=\"You only respond in haikus.\",\n",
+        "        model=OpenAIChatCompletionsModel(model=MODEL, openai_client=client),\n",
+        "    )\n",
+        "\n",
+        "    result = await Runner.run(\n",
+        "        agent,\n",
+        "        \"Tell me about recursion in programming.\",\n",
+        "    )\n",
+        "    print(result.final_output)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    asyncio.run(main())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jQ6IiI2h3RYm",
+        "outputId": "7472e4f5-1e64-49ac-c83f-8ef5d948ae53"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "A function calls self,  \n",
+            "Like a loop but more profound,  \n",
+            "Base case stops the dance.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA4vWqtvN6wm",
-        "outputId": "06f541a6-931e-491c-a586-3b1f4a860f87"
+        "outputId": "70d9d8a2-461f-4424-b444-f9e70803dfb2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "A function calls self,\n",
-            "Breaking tasks into smaller,\n",
-            "Until base is reached.\n",
-            "\n"
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Recursion calls self,  \n",
+            "Base case stops endless looping,  \n",
+            "Like mirrors reflecting.  \n",
+            "\n",
+            "\n",
+            "\n",
+            "Functions dive within,  \n",
+            "Each step a simpler problem,  \n",
+            "Till answers rise back.  \n",
+            "\n",
+            "\n",
+            "\n",
+            "Beware stack overflow,  \n",
+            "Depth without base will collapse,  \n",
+            "Balance is the key.\n"
           ]
         }
       ],
@@ -289,7 +407,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "4lH6YmrSvA9W"
+      },
       "source": [
         "# OpenRouter 404 Error Solution\n",
         "\n",
@@ -309,7 +429,7 @@
         "\n",
         "2. **Re-run your code** after enabling\n",
         "\n",
-        "![OpenRouter Settings Screenshot](./openrouter.png)\n",
+        "![OpenRouter Settings Screenshot](https://github.com/bilalpiaic/learn-agentic-ai/blob/main/01_ai_agents_first/02_openrouter/openrouter.png?raw=1)\n",
         "*(Example: Enable prompt training in privacy settings)*\n",
         "\n",
         "## Prevention\n",
@@ -320,7 +440,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
