--- a/01_ai_agents_first/07_streaming/streaming.ipynb
+++ b/01_ai_agents_first/07_streaming/streaming.ipynb
@@ -29,11 +29,12 @@
         "!pip install -Uq openai-agents"
       ],
       "metadata": {
-        "id": "3QdkOviEB2ay",
+        "collapsed": true,
+        "id": "qqqAR8fxNaDi",
+        "outputId": "b955d69a-6f9c-4ada-fa52-74286bfaec5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "80fb32e1-719f-4d50-9d9e-cca72b0f2591"
+        }
       },
       "execution_count": 1,
       "outputs": [
@@ -41,9 +42,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/75.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.5/75.5 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/128.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m128.5/128.5 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/567.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m563.2/567.4 kB\u001b[0m \u001b[31m71.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m567.4/567.4 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/116.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m116.9/116.9 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.3/129.3 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m119.5/119.5 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.4/44.4 kB\u001b[0m \u001b[31m1.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m72.0/72.0 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.5/62.5 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -67,7 +71,7 @@
       "metadata": {
         "id": "7A5YLi3HCfBV"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +119,7 @@
       "metadata": {
         "id": "QSIWS6RvC-a4"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -130,45 +134,30 @@
     {
       "cell_type": "code",
       "source": [
-        "os.environ['OPENAI_API_KEY'] = userdata.get('OPENAI_API_KEY')"
+        "os.environ['GEMINI_API_KEY'] = userdata.get('GEMINI_API_KEY')"
       ],
       "metadata": {
         "id": "IrgKhgyTYvEn"
       },
-      "execution_count": 32,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tg583lQEBRWo",
-        "outputId": "7ed11ad5-b98a-4539-9fe5-706343bc608c"
+        "outputId": "30597847-8efc-44bd-81f6-a19a9d5f68cd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sure, here are five jokes for you:\n",
-            "\n",
-            "1. Why don't scientists trust atoms?\n",
-            "   - Because they make up everything!\n",
-            "\n",
-            "2. What do you call fake spaghetti?\n",
-            "   - An impasta!\n",
-            "\n",
-            "3. Why did the scarecrow win an award?\n",
-            "   - Because he was outstanding in his field!\n",
-            "\n",
-            "4. What do you get when you cross a snowman and a vampire?\n",
-            "   - Frostbite.\n",
-            "\n",
-            "5. Why couldn't the bicycle stand up by itself?\n",
-            "   - It was two-tired!"
+            "Error: The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\n"
           ]
         }
       ],
@@ -186,12 +175,13 @@
         "        instructions=\"You are a helpful assistant.\",\n",
         "\n",
         "    )\n",
-        "\n",
-        "    result = Runner.run_streamed(agent, input=\"Please tell me 5 jokes.\")\n",
-        "    async for event in result.stream_events():\n",
-        "        if event.type == \"raw_response_event\" and isinstance(event.data, ResponseTextDeltaEvent):\n",
+        "    try:\n",
+        "        result = Runner.run_streamed(agent, input=\"Please tell me 5 jokes.\")\n",
+        "        async for event in result.stream_events():\n",
+        "          if event.type == \"raw_response_event\" and isinstance(event.data, ResponseTextDeltaEvent):\n",
         "            print(event.data.delta, end=\"\", flush=True)\n",
-        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error: {e}\")\n",
         "\n",
         "\n",
         "asyncio.run(main())"
@@ -266,7 +256,7 @@
         },
         "outputId": "3645fd4c-0174-49bc-eb20-2321bc5e183f"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
